force-app/main/default/objects/custom_create273__c/custom_create273__c.object-meta.xml
<CustomObject>
    <label>Custom created object273</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects273</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>