force-app/main/default/objects/custom_create273__c/fields/custom_create_273field512__c.field-meta.xml
<CustomField>
    <fullName>custom_create_273field512__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 273field512</label>
    <type>Checkbox</type>
</CustomField>